# spd

./: .gitignore  CMakeLists.txt  LICENSE  README.md
example/: CMakeLists.txt  main.cpp  sepd_example  spd_example
include/: sepd.h  spd.h
include/sepd/: detector.h  event.h  range.h  util.h
include/spd/: detector.h  pattern.h  range.h  util.h
